--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^10.12.5",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
+    "vue-inline-svg": "^3.1.3",
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
